--- a/css/style.css
+++ b/css/style.css
@@ -27,11 +27,14 @@ ul {
     padding: 0px;
 }
 
-/*Remove padding-right on last element*/
 li {
     display: inline;
     font-size: 20px;
     padding-right: 10px;
+}
+
+li:nth-child(3) {
+    padding-right: 0px;
 }
 
 p {
